--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
-version: "3"
-services:
-  launcher:
-    build: .
-    ports:
-      - "80:80"
-    restart: always
-    container_name: web-launcher
-    volumes:
-      - ./web:/var/www/html
-      - ./web/config/php.ini:/usr/local/etc/php/php.ini
+# version: "3"
+# services:
+#   launcher:
+#     build: .
+#     ports:
+#       - "80:80"
+#     restart: always
+#     container_name: web-launcher
+#     volumes:
+#       - ./web:/var/www/html
+#       - ./web/config/php.ini:/usr/local/etc/php/php.ini
 
   # boberto-pgadmin:
   #   container_name: boberto-pgadmin
@@ -22,11 +22,11 @@ services:
   #   ports:
   #     - "5050:80"
 
-  redis-compose:
-    image: redis
-    restart: always
-    container_name: redis-launcher
-    command: redis-server --requirepass SUASENHA --appendonly yes
-    hostname: redis
-    ports:
-      - "6379:6379"
+  # redis-compose:
+  #   image: redis
+  #   restart: always
+  #   container_name: redis-launcher
+  #   command: redis-server --requirepass SUASENHA --appendonly yes
+  #   hostname: redis
+  #   ports:
+  #     - "6379:6379"
