--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,15 +20,19 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
 
-    - name: Navigate to Workspace
-      run: cd $GITHUB_WORKSPACE
       
-      uses: actions/setup-node@v2
+    - uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm run build:all
+      run: npm run build:all
 
-    - name: Navigate to Workspace
+    - name: 'Get Previous tag'
+      id: previoustag
+      uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      with:
+        fallback: 1.0.0.0
+        
+    - name: Navigate to dIR
       run: cd dist
 
     - name: Upload Release
