--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,7 +23,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
+
+    - uses: actions/setup-node@v2
+    - name: Build all releases
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm run build:all
