--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,13 +7,14 @@ name: Node.js CI
 on:
   push:
     branches: [ dev ]
-  pull_request:
-    branches: [ dev ]
+  # pull_request:
+  #   branches: [ dev ]
 
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+
 
     strategy:
       matrix:
@@ -47,3 +48,4 @@ jobs:
        title: "Development Build"
        files: |
         ./dist/*.zip
+        ./dist/*.exe
