--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,23 +25,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
     
-    - name: manifest Version
-      uses: deef0000dragon1/json-edit-action/@v1
-      env:
-        KEY: url
-        VALUE: http://0-0-0-0
-        FILE: package.json
-
-    - name: Test package.json
-      run: dir
-
-    - uses: actions/setup-node@v2
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm run build:all
 
     - name: Navigate to Workspace
       run: cd $GITHUB_WORKSPACE
+
+    - name: Test package.json
+      run: dir
 
     - name: 'Get Previous tag'
       id: previoustag
