--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,17 +25,13 @@ jobs:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
     
+    #   uses: actions/setup-node@v2
+    #   with:
+    #     node-version: ${{ matrix.node-version }}
+    # - run: npm run build:all
+
     - name: Navigate to Workspace
-    - run: cd $GITHUB_WORKSPACE
-
-    - name: Test package.json
-    - run: dir
-
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-    - run: npm run build:all
-
+      run: cd $GITHUB_WORKSPACE
 
     - name: 'Get Previous tag'
       id: previoustag
