--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,8 +22,8 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/checkout@v2
     
     #   uses: actions/setup-node@v2
     #   with:
