--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,14 +34,14 @@ jobs:
       run: cd $GITHUB_WORKSPACE
 
     - name: test files
-      run: dir
+      run: dir 
 
-    - name: manifest Version
-      uses: deef0000dragon1/json-edit-action/@v1
-      env:
-        KEY: url
-        VALUE: ${{ secrets.URL_DEV }}
-        FILE: package.json 
+    - name: Update package.json version
+      uses: jossef/action-set-json-field@v1
+      with:
+        file: package.json
+        field: url
+        value: ${{ secrets.URL_DEV }}
 
     - name: Test new package json file
       run: type .\package.json
