--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -25,16 +25,14 @@ jobs:
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/checkout@v2
     
-    #   uses: actions/setup-node@v2
-    #   with:
-    #     node-version: ${{ matrix.node-version }}
-    # - run: npm run build:all
-
     - name: Navigate to Workspace
       run: cd $GITHUB_WORKSPACE
 
-    - name: test files
-      run: dir 
+    - name: Get Previous tag
+      id: previoustag
+      uses: "WyriHaximus/github-action-get-previous-tag@v1"
+      with:
+        fallback: 1.0.0.0
 
     - name: Update package.json URL
       uses: jossef/action-set-json-field@v1
@@ -43,22 +41,25 @@ jobs:
         field: url
         value: ${{ secrets.URL_DEV }}
 
-    - name: Test new package json file
-      run: type .\package.json
+    - name: Update package.json VERSION
+      uses: jossef/action-set-json-field@v1
+      with:
+        file: package.json
+        field: version
+        value: ${{ steps.previoustag.outputs.tag }}
 
-    # - name: Get Previous tag
-    #   id: previoustag
-    #   uses: "WyriHaximus/github-action-get-previous-tag@v1"
-    #   with:
-    #     fallback: 1.0.0.0
+    - uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+      run: npm run build:all
 
-    # - name: Upload Release
-    #   uses: "marvinpinto/action-automatic-releases@latest"
-    #   with:
-    #    repo_token: "${{ secrets.GITHUB_TOKEN }}"
-    #    automatic_release_tag: "${{ steps.previoustag.outputs.tag }}"
-    #    prerelease: false
-    #    title: "Development Build"
-    #    files: |
-    #     ./dist/*.zip
-    #     ./dist/*.exe
+    - name: Upload Release
+      uses: "marvinpinto/action-automatic-releases@latest"
+      with:
+       repo_token: "${{ secrets.GITHUB_TOKEN }}"
+       automatic_release_tag: "${{ steps.previoustag.outputs.tag }}"
+       prerelease: false
+       title: "Development Build"
+       files: |
+        ./dist/*.zip
+        ./dist/*.exe
