--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,6 +22,7 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/checkout@v2
     
@@ -48,10 +49,11 @@ jobs:
         field: version
         value: ${{ steps.previoustag.outputs.tag }}
 
-    - uses: actions/setup-node@v2
+    - name: Compile boberto launcher
+      uses: actions/setup-node@v2
       with:
         node-version: ${{ matrix.node-version }}
-      run: npm run build:all
+    - run: npm run build:all
 
     - name: Upload Release
       uses: "marvinpinto/action-automatic-releases@latest"
