--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "node": "16.x.x"
   },
   "chromium-args": "--enable-logging --v=1 --disable-gpu --mixed-content",
-  "url": "http://boberto.net:5000/cliente",
+  "url": "http://boberto.net:5000",
+  "directory": ".bobertolandia",
   "user": "",
   "webkit": {
     "plugin": true
